--- a/school-overview.html
+++ b/school-overview.html
@@ -23,19 +23,20 @@
         </div>
         <div class="header_nav">
             <ul class="nav1">
-                <li><a href="#"><span></span>访客</a></li>
-                <li><a href="#"><span></span>校友</a></li>
-                <li><a href="#"><span></span>捐赠</a></li>
-                <li><a href="#"><span></span>新闻网</a></li>
-                <li><a href="#"><span></span>内网</a></li>
-                <li><a href="#"><span></span>邮箱</a></li>
-                <li><a href="#"><span></span>图书馆</a></li>
+                <li><a href="login.html"><span></span>登录</a></li>
+                <li><a href="javascript:;"><span></span>访客</a></li>
+                <li><a href="javascript:;"><span></span>校友</a></li>
+                <li><a href="javascript:;"><span></span>捐赠</a></li>
+                <li><a href="javascript:;"><span></span>新闻网</a></li>
+                <li><a href="javascript:;"><span></span>内网</a></li>
+                <li><a href="javascript:;"><span></span>邮箱</a></li>
+                <li><a href="javascript:;"><span></span>图书馆</a></li>
                 <li class="search"><input type="text" class="text1" /></li>
 
             </ul>
             <ul class="nav2">
                 <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)">
-                    <a href="#">
+                    <a href="javascript:;">
                         <div class="box">
                             <div class="qian">学校概况</div>
                             <div class="xia">发现更多</div>
@@ -46,74 +47,96 @@
                                 href="school-overview.html">学校简介</a></li>
                         <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
                                 href="school-leader.html">学校领导</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">校区分布</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">校区分布</a></li>
                         <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
                                 href="school-history.html">历史改革</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">党建工作</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">党建工作</a></li>
                         <div class="cur_tar"></div>
                     </ul>
                 </li>
                 <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)">
-                    <a href="#">
+                    <a href="javascript:;">
                         <div class="box">
                             <div class="qian">机构设置</div>
                             <div class="xia">发现更多</div>
                         </div>
                     </a>
                     <ul class="list_cur">
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">教学单位</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">党政管理</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">直属单位</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">科研机构</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">群团组织</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">教学单位</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">党政管理</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">直属单位</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">科研机构</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">群团组织</a></li>
                         <div class="cur_tar"></div>
                     </ul>
                 </li>
                 <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)">
-                    <a href="#">
+                    <a href="javascript:;">
                         <div class="box">
                             <div class="qian">教学工作</div>
                             <div class="xia">发现更多</div>
                         </div>
                     </a>
                     <ul class="list_cur">
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">师资队伍</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">教学工作</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">科学研究</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">事务大厅</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">在线办公</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">师资队伍</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">教学工作</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">科学研究</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">事务大厅</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">在线办公</a></li>
                         <div class="cur_tar"></div>
                     </ul>
                 </li>
                 <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)">
-                    <a href="#">
+                    <a href="javascript:;">
                         <div class="box">
                             <div class="qian">招生就业</div>
                             <div class="xia">发现更多</div>
                         </div>
                     </a>
                     <ul class="list_cur">
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">人才招聘</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">招生信息</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">就业信息</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">在校生信息</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">教职工信息</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">人才招聘</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">招生信息</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">就业信息</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">在校生信息</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">教职工信息</a></li>
                         <div class="cur_tar"></div>
                     </ul>
                 </li>
                 <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)">
-                    <a href="#">
+                    <a href="javascript:;">
                         <div class="box">
                             <div class="qian">校园生活</div>
                             <div class="xia">发现更多</div>
                         </div>
                     </a>
                     <ul class="list_cur">
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">宣传部</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">团委</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">勤助中心</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">图书馆</a></li>
-                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="#">校友会</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">宣传部</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a href="javascript:;">团委</a>
+                        </li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">勤助中心</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">图书馆</a></li>
+                        <li onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this)"><a
+                                href="javascript:;">校友会</a></li>
                         <div class="cur_tar"></div>
                     </ul>
                 </li>
@@ -131,7 +154,8 @@
     <div class="title w1">
         <div class="title_left">
             <h1>学校简介</h1>
-            <p><a href="index.html">首页</a><span>·</span><a href="#">学校概况</a><span>·</span><a href="#">学校简介</a></p>
+            <p><a href="index.html">首页</a><span>·</span><a href="javascript:;">学校概况</a><span>·</span><a
+                    href="javascript:;">学校简介</a></p>
         </div>
     </div>
     <!-- 主体模块 -->
@@ -155,9 +179,9 @@
             <ul>
                 <li><a href="school-overview.html" class="active">学校简介<div><span></span></div></a></li>
                 <li><a href="school-leader.html">学校领导<div><span></span></div></a></li>
-                <li><a href="#">校区分布<div><span></span></div></a></li>
+                <li><a href="javascript:;">校区分布<div><span></span></div></a></li>
                 <li><a href="school-history.html">历史改革<div><span></span></div></a></li>
-                <li><a href="#">党建工作<div><span></span></div></a></li>
+                <li><a href="javascript:;">党建工作<div><span></span></div></a></li>
             </ul>
         </div>
     </div>
@@ -252,14 +276,14 @@
         <div class="footer1">
             <p>友情链接</p>
             <ul>
-                <li><a href="#">国家教育部</a></li>
-                <li><a href="#">中国科教网</a></li>
-                <li><a href="#">国家科技部</a></li>
-                <li><a href="#">广东省教育厅</a></li>
-                <li><a href="#">广东省人事厅</a></li>
-                <li><a href="#">广东省科学技术厅</a></li>
-                <li><a href="#">兄弟院校</a></li>
-                <li><a href="#">就业服务信息网</a></li>
+                <li><a href="javascript:;">国家教育部</a></li>
+                <li><a href="javascript:;">中国科教网</a></li>
+                <li><a href="javascript:;">国家科技部</a></li>
+                <li><a href="javascript:;">广东省教育厅</a></li>
+                <li><a href="javascript:;">广东省人事厅</a></li>
+                <li><a href="javascript:;">广东省科学技术厅</a></li>
+                <li><a href="javascript:;">兄弟院校</a></li>
+                <li><a href="javascript:;">就业服务信息网</a></li>
             </ul>
         </div>
         <div class="footer2">
@@ -310,7 +334,7 @@
     window.onscroll = function () { scrollFunction() };
 
     function scrollFunction() {
-        console.log(121);
+        // console.log(121);
         if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
             document.getElementById("gotoTop").style.display = "block";
         } else {
