--- a/login.html
+++ b/login.html
@@ -16,12 +16,13 @@
             统一身份认证
         </div>
         <div class="header_right">
-            <span><a href="#">学校官网</a></span><span>|</span><span><a href="#">一网通办</a></span>
+            <span><a href="javascript:;">学校官网</a></span><span>|</span><span><a href="javascript:;">一网通办</a></span>
         </div>
     </div>
     <div class="main">
         <div class="form">
-            <div class="form_hd"><a href="#" id="a1" class="logoa">账号登录</a><a href="#" id="a2">注册账号</a></div>
+            <div class="form_hd"><a href="javascript:;" id="a1" class="logoa">账号登录</a><a href="javascript:;"
+                    id="a2">注册账号</a></div>
             <div class="form_bd" id="logo1">
                 <form>
                     <input type="text" class="text" placeholder="请输入用户名">
@@ -29,9 +30,9 @@
                     <input type="submit" class="submit" value="登录">
                 </form>
                 <div class="more">
-                    <p><span>您还可以使用以下方式登录</span><em><a href="#">忘记密码？</a></em></p>
+                    <p><span>您还可以使用以下方式登录</span><em><a href="javascript:;">忘记密码？</a></em></p>
                     <div class="way">
-                        <div class="wechat"><a href="#"></a></div>
+                        <div class="wechat"><a href="javascript:;"></a></div>
                     </div>
                 </div>
             </div>
