--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>广东石油化工学院</title>
+    <title>清华大学</title>
     <link rel="icon" href="logo.ico" />
     <link href="css/base.css" type="text/css" rel="stylesheet" />
     <link href="css/index.css" type="text/css" rel="stylesheet" />
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="header_logo">
             <h1>
-                <a href="index.html" title="广东石油化工学院">广东石油化工学院</a>
+                <a href="index.html" title="清华大学">清华大学</a>
             </h1>
         </div>
         <div class="header_nav">
@@ -138,17 +138,14 @@
         </div>
     </div>
 
-    <div id="banner">
-        <main id="main">
-            <section>
-                <div class="tupian">
-                    <img src="img/lb1.jpg" class="image">
+    <div class="banner">
+        <main class="banner_main">
+            <section class="banner_section">
+                <div class="banner_image_wrapper">
                 </div>
-
                 <div class="select"></div>
-
-                <div class="bt left"><a href="javascript:;"></a></div>
-                <div class="bt right"><a href="javascript:;"></a></div>
+                <div class="btn left"><a href="javascript:;"></a></div>
+                <div class="btn right"><a href="javascript:;"></a></div>
             </section>
         </main>
     </div>
@@ -200,14 +197,14 @@
                     <li class="new_bd_dl">
                         <a href="javascript:;">
                             <div class="new_bd_dt"><img src="img/new1.jpg" class="dt_img" /></div>
-                            <div class="new_bd_dd">科技驻镇进行时 |广东石油化工学院科技特派员团队服务驻镇帮镇扶村点圣女果产业</div>
+                            <div class="new_bd_dd">科技驻镇进行时 |清华大学科技特派员团队服务驻镇帮镇扶村点圣女果产业</div>
                         </a>
                     </li>
                     <li><a href="javascript:;">
-                            <div class="new_bd_li_div">正式获批！广东石油化工学院获批硕士点博士点</div>
+                            <div class="new_bd_li_div">正式获批！清华大学获批硕士点博士点</div>
                         </a></li>
                     <li><a href="javascript:;">
-                            <div class="new_bd_li_div">庄悦群到广东石油化工学院及茂名绿色化工研究院调研：以科技创新赋能产业转型升级</div>
+                            <div class="new_bd_li_div">庄悦群到清华大学及茂名绿色化工研究院调研：以科技创新赋能产业转型升级</div>
                         </a></li>
                     <li><a href="javascript:;">
                             <div class="new_bd_li_div">李为民率队到国防教育训练基地开展军事训练日活动</div>
@@ -220,7 +217,7 @@
                         <li class="current">
                             <div class="current_img"><a href="javascript:;"><img src="img/c1.jpg" /></a></div>
                             <div class="current_little">-&nbsp;头条新闻 &nbsp;HEADLINES&nbsp;-</div>
-                            <h1 class="current_h1"><a href="javascript:;">【党史学习教育】广东石油化工学院召开学习贯彻党的十九届六中全会精神动员部署会</a>
+                            <h1 class="current_h1"><a href="javascript:;">【党史学习教育】清华大学召开学习贯彻党的十九届六中全会精神动员部署会</a>
                             </h1>
                             <p class="current_context">
                                 11月16日下午，全省教育系统学习贯彻党的十九届六中全会精神动员部署会召开。会议认真学习贯彻习近平总书记在党的十九届六中全会上的重要讲话精神和全会精神，传达全省学习贯彻党的十九届六中全会精神干部大会精神，对全省教育系统做好学习宣传贯彻工作和进一步谋划推动广东教育高质量发展进行动员部署。
@@ -231,15 +228,15 @@
                             <div class="current_little">-&nbsp;头条新闻 &nbsp;HEADLINES&nbsp;-</div>
                             <h1 class="current_h1"><a href="javascript:;">六十七年艰苦奋斗励精图治铸勋绩 甲子七载求实献身继往开来谱华章</a></h1>
                             <p class="current_context">
-                                11月11日，广东石油化工学院迎来建校67周年，学校在官渡校区举行庆祝建校67周年座谈会。学校党委书记、校长张清华在座谈会上通报了学校“十三五”发展成就和“十四五”规划编制情况。座谈会由学校党委常委、副校长周如金主持。
+                                11月11日，清华大学迎来建校67周年，学校在官渡校区举行庆祝建校67周年座谈会。学校党委书记、校长张清华在座谈会上通报了学校“十三五”发展成就和“十四五”规划编制情况。座谈会由学校党委常委、副校长周如金主持。
                             </p>
                         </li>
                         <li class="pic">
                             <div class="current_img"><a href="javascript:;"><img src="img/c3.jpg" /></a></div>
                             <div class="current_little">-&nbsp;头条新闻 &nbsp;HEADLINES&nbsp;-</div>
-                            <h1 class="current_h1"><a href="javascript:;">广东石油化工学院第二十二届体育运动会开幕</a></h1>
+                            <h1 class="current_h1"><a href="javascript:;">清华大学第二十二届体育运动会开幕</a></h1>
                             <p class="current_context">
-                                11月11日上午，官渡校区田径运动场彩旗飘扬，在一片欢腾的气氛中，广东石油化工学院第二十二届体育运动会隆重开幕。学校领导张清华、李华、张锅红、周如金、李为民，各二级学院和部分机关处室的负责人出席开幕式。开幕式由学校党委副书记张锅红主持。
+                                11月11日上午，官渡校区田径运动场彩旗飘扬，在一片欢腾的气氛中，清华大学第二十二届体育运动会隆重开幕。学校领导张清华、李华、张锅红、周如金、李为民，各二级学院和部分机关处室的负责人出席开幕式。开幕式由学校党委副书记张锅红主持。
                             </p>
                         </li>
                     </ul>
@@ -263,10 +260,10 @@
                             <div class="new_bd_li_div">【党史学习教育】党史学习教育官方网站</div>
                         </a></li>
                     <li><a href="javascript:;">
-                            <div class="new_bd_li_div">广东石油化工学院2021年省高职质量工程专栏</div>
+                            <div class="new_bd_li_div">清华大学2021年省高职质量工程专栏</div>
                         </a></li>
                     <li><a href="javascript:;">
-                            <div class="new_bd_li_div">广东石油化工学院校园全景VR地图</div>
+                            <div class="new_bd_li_div">清华大学校园全景VR地图</div>
                         </a></li>
                 </ul>
             </div>
@@ -295,7 +292,7 @@
                     <a href="javascript:;">
                         <img src="img/text4.jpg" height="335" />
                         <div class="bd2_you_dec">
-                            <h1 class="dec_h1">广东石油化工学院隆重举行2021广油之星年度盛典</h1>
+                            <h1 class="dec_h1">清华大学隆重举行2021广油之星年度盛典</h1>
                         </div>
                     </a>
                 </div>
@@ -303,7 +300,7 @@
                     <a href="javascript:;">
                         <img src="img/new_tow2.jpg" height="335" />
                         <div class="bd2_you_dec">
-                            <h1 class="dec_h1">广东石油化工学院隆重举行2021广油之星年度盛典</h1>
+                            <h1 class="dec_h1">清华大学隆重举行2021广油之星年度盛典</h1>
                         </div>
                     </a>
                 </div>
@@ -311,7 +308,7 @@
                     <a href="javascript:;">
                         <img src="img/new_tow3.jpg" height="335" />
                         <div class="bd2_you_dec">
-                            <h1 class="dec_h1">广东石油化工学院隆重举行2021广油之星年度盛典</h1>
+                            <h1 class="dec_h1">清华大学隆重举行2021广油之星年度盛典</h1>
                         </div>
                     </a>
                 </div>
@@ -405,7 +402,7 @@
                         </li>
                         <li>
                             <a href="javascript:;">
-                                <p>关于开展2021年度广东石油化工学院创新创业教育研究项目申报工作的通知</p>
+                                <p>关于开展2021年度清华大学创新创业教育研究项目申报工作的通知</p>
                                 <h2><span class="date">2021-11-24</span><span class="hr"></span></h2>
                             </a>
                         </li>
@@ -441,7 +438,7 @@
                                         <span>澎湃新闻</span>
                                         <div class="bd4_ul_li_dt_bg"></div>
                                     </div>
-                                    <div class="bd4_ul_li_dd">庄悦群到广东石油化工学院及茂名绿色化工研究院调研：以科技创新赋能产业转型升级</div>
+                                    <div class="bd4_ul_li_dd">庄悦群到清华大学及茂名绿色化工研究院调研：以科技创新赋能产业转型升级</div>
                                 </a>
                             </li>
                             <li>
@@ -520,7 +517,7 @@
                             <p class="events_list_p2"><a href="javascript:;">《夏夜星辰》2021 BIMFA大师庆典音乐会</a></p>
                             <div class="events_list_p3">
                                 <div class="events_list_p3_time">&nbsp;&nbsp;2021年10月14日&nbsp;15:00-17:00</div>
-                                <div class="events_list_p3_address">&nbsp;&nbsp;广东石油化工学院图书馆大门前</div>
+                                <div class="events_list_p3_address">&nbsp;&nbsp;清华大学图书馆大门前</div>
                             </div>
                         </li>
                         <li>
@@ -581,7 +578,7 @@
                             <p class="events_list_p2"><a href="javascript:;">欧洲文明的现代历程——革命与现代国家的建立</a></p>
                             <div class="events_list_p3">
                                 <div class="events_list_p3_time">&nbsp;&nbsp;2021年11月29日&nbsp;13:00-15:00</div>
-                                <div class="events_list_p3_address">&nbsp;&nbsp;广东石油化工学院网络教学平台</div>
+                                <div class="events_list_p3_address">&nbsp;&nbsp;清华大学网络教学平台</div>
                             </div>
                         </li>
                         <li>
@@ -611,7 +608,7 @@
                             <p class="events_list_p2"><a href="javascript:;">化学工程学院学术报告（三）：生物质能源发展前景及相关技术分析</a></p>
                             <div class="events_list_p3">
                                 <div class="events_list_p3_time">&nbsp;&nbsp;2021年12月14日&nbsp;15:00-17:00</div>
-                                <div class="events_list_p3_address">&nbsp;&nbsp;广东石油化工学院图书馆一楼会议室</div>
+                                <div class="events_list_p3_address">&nbsp;&nbsp;清华大学图书馆一楼会议室</div>
                             </div>
                         </li>
                         <li>
@@ -639,7 +636,7 @@
                 <div class="scenery_wal_til_en">SCENERY</div>
                 <div class="scenery_wal_til_cn">校园风光</div>
                 <div class="scenery_wal_hr"></div>
-                <p>广东石油化工学院地处中国南方最大的石化生产基地和水果生产基地、美丽的海滨城市——广东省茂名市，占地面积135.96万平方米（约2040亩），分官渡、西城、光华3个校区。</p>
+                <p>清华大学地处中国南方最大的石化生产基地和水果生产基地、美丽的海滨城市——广东省茂名市，占地面积135.96万平方米（约2040亩），分官渡、西城、光华3个校区。</p>
                 <div class="scenery_wal_more"><a href="javascript:;">查看更多<span></span></a></div>
             </div>
             <div class="list0">
@@ -801,7 +798,7 @@
                         <div class="blue_bottom_title_ul_li_hid">
                             <div class="blue_bottom_title_ul_li_hid_cur"></div>
                             <img src="img/w1.bmp" />
-                            <p>广东石油化工学院快手号</p>
+                            <p>清华大学快手号</p>
                         </div>
                     </li>
                     <li>
@@ -809,7 +806,7 @@
                         <div class="blue_bottom_title_ul_li_hid">
                             <div class="blue_bottom_title_ul_li_hid_cur"></div>
                             <img src="img/w2.jpg" />
-                            <p>广东石油化工学院抖音号</p>
+                            <p>清华大学抖音号</p>
                         </div>
                     </li>
                     <li><a href="javascript:;"><img src="img/u3.png" /></a></li>
@@ -818,7 +815,7 @@
                         <div class="blue_bottom_title_ul_li_hid">
                             <div class="blue_bottom_title_ul_li_hid_cur"></div>
                             <img src="img/w3.jpg" />
-                            <p>广东石油化工学院微博号</p>
+                            <p>清华大学微博号</p>
                         </div>
                     </li>
                     <li>
@@ -826,7 +823,7 @@
                         <div class="blue_bottom_title_ul_li_hid">
                             <div class="blue_bottom_title_ul_li_hid_cur"></div>
                             <img src="img/w4.jpg" />
-                            <p>广东石油化工学院微信号</p>
+                            <p>清华大学微信号</p>
                         </div>
                     </li>
                 </ul>
@@ -927,12 +924,12 @@
                     </div>
                 </div>
                 <div class="footer2_right_bot"><span>版权所有
-                        Copyright广东石油化工学院&nbsp;&nbsp;粤ICP备05008880号</span><span>&nbsp;&nbsp;12965295</span></div>
+                        Copyright清华大学&nbsp;&nbsp;粤ICP备05008880号</span><span>&nbsp;&nbsp;12965295</span></div>
             </div>
         </div>
         <div class="footer3">
             <div class="footer3_img"><img src="img/w4.jpg" /></div>
-            <p>欢迎关注广东石油化工学院公众号</p>
+            <p>欢迎关注清华大学公众号</p>
         </div>
     </div>
 
@@ -943,7 +940,7 @@
         <a onclick="pageScroll()" class="backtop_a" title="回到顶部"><span></span></a>
     </div>
     <!--回到顶部按钮结束-->
-
+    <script src="js/carousel.js"></script>
 </body>
 <!--新闻模块切换功能 -->
 <script type="text/javascript">
@@ -999,40 +996,40 @@
 </script>
 <!--校园看点功能 -->
 <script type="text/javascript">
-    $(function () {
-        var oPic = $('#slider_pic').find('ul');
-        var oImg = oPic.find('li');
-        var oLen = oImg.length;
-        var oLi = oImg.width();
-        var prev = $("#prev");
-        var next = $("#next");
+    // $(function () {
+    //     var oPic = $('#slider_pic').find('ul');
+    //     var oImg = oPic.find('li');
+    //     var oLen = oImg.length;
+    //     var oLi = oImg.width();
+    //     var prev = $("#prev");
+    //     var next = $("#next");
 
-        oPic.width(oLen * 390);//计算总长度
-        var iNow = 0;
-        var iTimer = null;
-        prev.click(function () {
-            if (iNow > 0) {
-                iNow--;
+    //     oPic.width(oLen * 390);//计算总长度
+    //     var iNow = 0;
+    //     var iTimer = null;
+    //     prev.click(function () {
+    //         if (iNow > 0) {
+    //             iNow--;
 
-            }
-            ClickScroll();
-        })
-        next.click(function () {
-            if (iNow < oLen - 3) {
-                iNow++
-            }
-            ClickScroll();
-        })
+    //         }
+    //         ClickScroll();
+    //     })
+    //     next.click(function () {
+    //         if (iNow < oLen - 3) {
+    //             iNow++
+    //         }
+    //         ClickScroll();
+    //     })
 
-        function ClickScroll() {
+    //     function ClickScroll() {
 
-            iNow == 0 ? prev.addClass('no_click') : prev.removeClass('no_click');
-            iNow == oLen - 3 ? next.addClass("no_click") : next.removeClass("no_click");
+    //         iNow == 0 ? prev.addClass('no_click') : prev.removeClass('no_click');
+    //         iNow == oLen - 3 ? next.addClass("no_click") : next.removeClass("no_click");
 
-            oPic.animate({ left: -iNow * 390 })
-        }
+    //         oPic.animate({ left: -iNow * 390 })
+    //     }
 
-    })
+    // })
 
 
 </script>
