fix: action class repeat

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             <section class="banner_section">
                 <div class="banner_image_wrapper">
                 </div>
-                <div class="select"></div>
-                <div class="btn left"><a href="javascript:;"></a></div>
-                <div class="btn right"><a href="javascript:;"></a></div>
+                <div class="banner_select"></div>
+                <div class="banner_btn banner_btn_left"><a href="javascript:;"></a></div>
+                <div class="banner_btn banner_btn_right"><a href="javascript:;"></a></div>
             </section>
         </main>
     </div>
@@ -958,7 +958,7 @@
         div2.style.display = "none";
         div3.style.display = "none";
         div4.style.display = "none";
-        li1.className = "active";
+        li1.className = "active2";
         li2.className = "";
         li3.className = "";
         li4.className = "";
@@ -969,7 +969,7 @@
         div3.style.display = "none";
         div4.style.display = "none";
         li1.className = "";
-        li2.className = "active";
+        li2.className = "active2";
         li3.className = "";
         li4.className = "";
     }
@@ -980,7 +980,7 @@
         div4.style.display = "none";
         li1.className = "";
         li2.className = "";
-        li3.className = "active";
+        li3.className = "active2";
         li4.className = "";
     }
     li4.onclick = function () {
@@ -991,7 +991,7 @@
         li1.className = "";
         li2.className = "";
         li3.className = "";
-        li4.className = "active";
+        li4.className = "active2";
     }
 </script>
 <!--校园看点功能 -->
