feat: 头部导航栏菜单图标

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
                 </li>
             </ul>
         </div>
+        <label for="subscribeNews" class="label">
+            <input id="subscribeNews" class="nav_icon_checkbox" type="checkbox" hidden/>
+            <div class="header_nav_icon">
+                <span class="nav_icon_center"></span>
+            </div>
+        </label>
     </div>
 
     <div class="banner">
